--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!--    style sheet-->
     <link rel="stylesheet" href="style.css">
+<!--    fonts awesome-->
+    <script src="https://kit.fontawesome.com/d2e1caad1a.js" crossorigin="anonymous"></script>
 </head>
 <body>
   <h1>Clipped <i class="fa-solid fa-scissors"></i></h1>
 
   <h3> Adults </h3>
+  <hr>
   <div class="flex-container">
       <div  id= "card1"class="card" style="width: 18rem; border:4px solid gold;">
           <img class="card-img-top" src="imgs/Fine-Curls-with-Vivid-Mid-Fade.webp" alt="Card image cap">
